initial work on the cpp realsense server

--- a/realsense_service/CMakeLists.txt
+++ b/realsense_service/CMakeLists.txt
@@ -8,11 +8,12 @@ project(realsense_service)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-	roscpp
+  roscpp
   rospy
   sensor_msgs
   std_msgs
   message_generation
+  genmsg
 )
 
 ## REALSENSE STUFF
@@ -118,7 +119,7 @@ catkin_python_setup()
 catkin_package(
 #  INCLUDE_DIRS include
   LIBRARIES service_example
-   CATKIN_DEPENDS rospy sensor_msgs std_msgs message_runtime
+  CATKIN_DEPENDS roscpp rospy sensor_msgs std_msgs message_runtime
   DEPENDS system_lib
 )
 
@@ -157,9 +158,11 @@ add_executable(${PROJECT_NAME}_node src/hello_realsense2.cpp)
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(${PROJECT_NAME}_node ${PROJECT_NAME}_gencpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES} ${realsense2_LIBRARY})
+
 
 #############
 ## Install ##
