--- a/iiwa_moveit_default/config/ompl_planning.yaml
+++ b/iiwa_moveit_default/config/ompl_planning.yaml
@@ -120,6 +120,9 @@ planner_configs:
     sparse_delta_fraction: 0.25  # delta fraction for connection distance. This value represents the visibility range of sparse samples. default: 0.25
     dense_delta_fraction: 0.001  # delta fraction for interface detection. default: 0.001
     max_failures: 5000  # maximum consecutive failure limit. default: 5000
+  RRTConnectkConfigDefault:
+    type: geometric::RRTConnect
+    range: 0.0  # Max motion added to tree. ==> maxDistance_ default: 0.0, if 0.0, set on setup()
 manipulator:
   planner_configs:
     - SBL
@@ -145,5 +148,6 @@ manipulator:
     - LazyPRMstar
     - SPARS
     - SPARStwo
+    - RRTConnectkConfigDefault
   projection_evaluator: joints(iiwa_joint_1,iiwa_joint_2)
   longest_valid_segment_fraction: 0.005
