--- a/realsense_service/CMakeLists.txt
+++ b/realsense_service/CMakeLists.txt
@@ -160,7 +160,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/hello_realsense2.cpp)
+add_executable(${PROJECT_NAME}_node src/realsense_cpp_server.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
