integrated orientation and location into execution (maybe)

--- a/rob9/CMakeLists.txt
+++ b/rob9/CMakeLists.txt
@@ -63,6 +63,7 @@ add_message_files(
    graspGroupSrv.srv
    moveitMoveToNamedSrv.srv
    moveitPlanToNamedSrv.srv
+   moveitPlanToPoseSrv.srv
    moveitMoveToPoseSrv.srv
    moveitExecuteSrv.srv
    moveitRobotStateSrv.srv
