work on execute_spline.py

--- a/rob9/CMakeLists.txt
+++ b/rob9/CMakeLists.txt
@@ -69,6 +69,8 @@ add_message_files(
    moveitExecuteSrv.srv
    moveitRobotStateSrv.srv
    runGraspingSrv.srv
+   tf2GetTransformSrv.srv
+   tf2VisualizeTransformSrv.srv
    tf2TransformPoseStampedSrv.srv
    tf2TransformPathSrv.srv
    tf2QuatToRotSrv.srv
