--- a/iiwa_noPtu_moveit/config/kinematics.yaml
+++ b/iiwa_noPtu_moveit/config/kinematics.yaml
@@ -4,3 +4,6 @@ manipulator:
   kinematics_solver_timeout: 0.005
   minimal_displacement_weight: 1
   avoid_joint_limits_weight: 1
+
+  #kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
+  #kinematics_solver_timeout: 0.005
