Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ CATKIN_IGNORE
 **/__pycache__
 __pycache__/
 affordanceAnalyzer/scripts/affordancenet_synthetic/weights.pth
+
+rob10/scripts/experiments/orientation_test/*.ply
