--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,10 @@ rob10/scripts/experiments/orientation_test_rule/*.ply
 rob10/scripts/experiments/orientation_test_rule/*.npy
 rob10/scripts/experiments/orientation_test_rule/*.txt
 rob10/scripts/experiments/orientation_test_rule/*.png
+
+moveit_scripts/experimental/joint_configurations
+moveit_scripts/experimental/find_ee_pose.py
+moveit_scripts/experimental/joint_positions.csv
+
+statistical_analysis
+user_study
